ircv3_parse_derive/tests/ui/de/fail/empty_value.stderr
error: `tag` value cannot be empty
 --> tests/ui/de/fail/empty_value.rs:5:17
  |
5 |     #[irc(tag = "")]
  |                 ^^

error: `source` value cannot be empty
  --> tests/ui/de/fail/empty_value.rs:11:20
   |
11 |     #[irc(source = "")]
   |                    ^^

error: expected integer literal
  --> tests/ui/de/fail/empty_value.rs:17:19
   |
17 |     #[irc(param = "")]
   |                   ^^

error: `with` value cannot be empty
  --> tests/ui/de/fail/empty_value.rs:23:31
   |
23 |     #[irc(tag = "key", with = "")]
   |                               ^^

error: `default` value cannot be empty
  --> tests/ui/de/fail/empty_value.rs:29:34
   |
29 |     #[irc(tag = "key", default = "")]
   |                                  ^^

error: `value` value cannot be empty
  --> tests/ui/de/fail/empty_value.rs:36:19
   |
36 |     #[irc(value = "")]
   |                   ^^
